<resources>
    <string name="app_name">SmartWifi</string>
    <string name="title_activity_main">목록</string>
    <string name="title_activity_add">추가</string>
    <string name="title_activity_edit">변경</string>
    <string name="title_activity_setting">설정</string>

    <!-- add activity -->
    <string name="add_Name">표시 될 이름</string>
    <string name="add_Wifiname">사용 될 WIFI</string>
    <string name="add_Priority">WIFI 우선 순위</string>
    <string name="add_pri_high">높음</string>
    <string name="add_pri_low">낮음</string>

    <!-- detail activity -->
    <string name="detail_Wifi">WIFI 연결</string>
    <string name="detail_Sound">음량 설정</string>
    <string name="detail_Bright">밝기 설정</string>
    <string name="detail_Bluetooth">블루투스 연결</string>
    <string name="detail_Sound_Mute">무음</string>
    <string name="detail_Sound_Vibrate">진동</string>
    <string name="detail_sound_spinnerText">벨소리</string>

    <!--Button -->
    <string name="click_ok">확인</string>

    <!--detail Fragment-->
    <string name="menu_detail_CurrentStatus">현재 상태</string>

    <!--dialog_menu-->
    <string name="dialog_Title">편집</string>
    <string name="dialog_state_true">설정 켜기</string>
    <string name="dialog_state_false">설정 끄기</string>
    <string name="dialog_edit">설정 편집</string>
    <string name="dialog_delete">설정 삭제</string>

    <string name="dialog_wifilist">리스트</string>
    <string anme="dialog_wifiSaveOK">저장</string>

    <!-- noti -->
    <string name="noti_wifiChange">변경</string>
    <string name="noti_stop">중지</string>
    <string name="noti_start">시작</string>
    <string name="noti_contentTextFirst">다음은</string>
    <string name="noti_contentTextEnd">입니다.
    </string>
</resources>
