<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:background="@color/White"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cogwheel_1"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/dialog_Title"
                android:textColor="@android:color/black"
                android:textSize="25dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:gravity="left"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke" />

        <TextView
            android:text="@string/dialog_state_false"
            android:id="@+id/tv_dialog_state"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:text="@string/dialog_edit"
            android:id="@+id/tv_dialog_edit"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
        android:text="@string/dialog_delete"
        android:id="@+id/tv_dialog_delete"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="20dp"
        android:paddingLeft="15dp"
        android:textColor="@color/Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp" />


    </LinearLayout>

</LinearLayout>