<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgray">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_draw" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawingCacheQuality="auto"
            android:layout_gravity="right"
            android:id="@+id/iv_toolbar"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ecologism" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="top"
        android:layout_gravity="top"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:text="@string/detail_Wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_wifi"
                android:textSize="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:switchMinWidth="60dp"
                android:checked="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke" />

            <Switch
                android:text="@string/detail_Bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_bluetooth"
                android:textSize="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:switchMinWidth="60dp"
                android:checked="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke" />
            <Switch
                android:text="@string/detail_Sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_sound"
                android:textSize="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:switchMinWidth="60dp"
                android:checked="false"/>

            <LinearLayout
                android:id="@+id/linear_sound"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@drawable/clickborder"
                android:layout_margin="10dp"
                android:padding="15dp">

                <TextView
                    android:text="상태"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sound_state_value"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="벨소리"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <SeekBar
                        android:id="@+id/sb_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb_sound_vibrate"
                        android:text="@string/detail_Sound_Vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:text="뮤   직"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <SeekBar
                        android:id="@+id/sb_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="1dp" />

                    <CheckBox
                        android:text="@string/detail_Sound_Vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke"
                android:layout_weight="1" />

            <Switch
                android:text="@string/detail_Bright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_bright"
                android:textSize="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:switchMinWidth="60dp"
                android:checked="false"/>

            <LinearLayout
                android:id="@+id/linear_bright"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/clickborder"
                android:layout_margin="10dp">
                <TextView
                    android:text="상태"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_bright_state_value"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:padding="5dp" />
                <SeekBar
                    android:id="@+id/sb_bright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="250"
                    android:padding="5dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke" />

            <View
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_weight="1"/>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_ok"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:textSize="20dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/White"
        android:id="@+id/btn_detail_Success"
        android:padding="10dp"
        android:layout_margin="10dp" />


</LinearLayout>
